FINERACT-2421: Add pastDueDate to loan summary and event